Добавил ноутбуки по подготовке данных и по АБ-тесту

--- a/notebook/PrepareData.ipynb
+++ b/notebook/PrepareData.ipynb
@@ -29,15 +29,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70a862ff-64c2-4046-b77a-2eac921fb3da",
+   "id": "5d1f7657-357b-49a1-b070-0d6cbc1a9eef",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.concat([\n",
     "    pd.read_json(data_path, lines=True) \n",
     "    for data_path \n",
-    "    in glob.glob(DATA_DIR + '/data/*/data.json')\n",
-    "])\n",
+    "    in glob.glob(DATA_DIR + '/data/*/data.*')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "70a862ff-64c2-4046-b77a-2eac921fb3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# data[\"rnd\"] = np.random.random(len(data))\n",
     "data[\"treatment\"] = data[\"experiments\"].map(lambda experiments: experiments[experiment])\n",
     "\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "fcbfa0ba-86de-4275-a874-85aaf87461b6",
    "metadata": {},
    "outputs": [],
@@ -57,7 +66,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "id": "e332b155-d794-49e2-b4c0-2b859c37ced2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23755873, 7)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b64532f3-5964-4984-bb3f-d11014d0a39d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user                               9999\n",
+       "track                             49999\n",
+       "message                            next\n",
+       "timestamp    2024-11-29 00:56:38.141000\n",
+       "time                                1.0\n",
+       "treatment                            T1\n",
+       "artist                               阿楷\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7ac241d3-4c4c-4598-a6a3-d5a0ea284316",
    "metadata": {},
    "outputs": [],
@@ -84,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "b7318525-4a00-44d9-9d3c-ba202d78c12e",
    "metadata": {},
    "outputs": [
@@ -92,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_91790/2354129256.py:4: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_292197/2354129256.py:4: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(sessionize)\n"
      ]
     }
@@ -109,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "b0f49019-fcd6-46ac-84b8-6abf4bffb135",
    "metadata": {},
    "outputs": [
@@ -117,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "167196it [00:03, 44691.50it/s]\n"
+      "3175000it [01:15, 41843.84it/s]\n"
      ]
     }
    ],
@@ -132,56 +190,68 @@
     "            'time': time}\n",
     "        prepare_data.append(new_record)\n",
     "\n",
-    "with open('../data/prepare_data.json', 'w') as f:\n",
-    "    json.dump(prepare_date, f)"
+    "# with open('../data/prepare_data.json', 'w') as f:\n",
+    "#   json.dump(prepare_date, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b73a8082-690a-4a72-b461-0377fc4380b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1176821"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(prepare_date)"
+    "df = pd.DataFrame(prepare_data)\n",
+    "df = df[df.first_track != df.track]\n",
+    "df.to_csv('../data/data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "19098e17-7c35-4e2a-9d86-394314e73ec0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1179178"
+       "20526321"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data)"
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7d422ad7-daba-405b-b064-31c3b9b14a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43481"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.first_track.nunique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9b295a-f1d6-45a9-9ee8-e3ad12126eb0",
+   "id": "3f5aba79-e8d0-4709-9767-81c25fe1233d",
    "metadata": {},
    "outputs": [],
    "source": []
